fixtures/error/createSong_userNotFound.js
module.exports = {
    statusCode: 404,
    detail: 'User not found'
  };
  